# psychlib

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
data/: 123_example_20260228_035118.csv  123_example_20260228_035125.csv  123_example_20260228_040925.csv
docs/: Clock.md  Context.md  Ctx.md  Data.md  Index.md  Nodes.md  Rand.md  Stim.md  Trial.md
examples/: colors.lua  flanker.lua  image.lua
lua/: flanker.lua  rect.lua
src/: error.rs  lib.rs  main.rs
src/clock/: instant.rs  mod.rs  platform.rs
src/data/: mod.rs  record.rs  session.rs  writer.rs
src/io/: keyboard.rs  mod.rs  response.rs
src/renderer/: context.rs  mod.rs  pipeline.rs  render_loop.rs  stimulus.rs  text.rs
src/runtime/: mod.rs
src/scheduler/: mod.rs
src/script/: api_clock.rs  api_data.rs  api_rand.rs  api_stim.rs  api_trial.rs  mod.rs  stdlib.lua
src/tests/: clock_scheduler.rs  data.rs  io.rs  mod.rs  runtime.rs  script.rs  stim.rs
