[package]
name = "psychlib"
version = "0.1.0"
edition = "2024"
description = "A psychology experiment runtime for native and WASM"
license = "MIT"
repository = "https://github.com/PsychLabIO/psychlib"

[lib]
name = "psychlib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "psychlib"
path = "src/main.rs"

[features]
default = ["native"]

native = ["spin_sleep", "tokio/full", "crossterm"]

wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
spin_sleep = { version = "1.2", optional = true }

mlua = { version = "0.10", features = [
    "luau",
    "vendored",
    "async",
    "serialize",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = [], optional = true }

clap = { version = "4", features = ["derive", "env"] }

thiserror = "1"
anyhow = "1"

crossterm = { version = "0.27", optional = true }

winit = { version = "0.30", features = ["rwh_06"] }
wgpu = { version = "27", features = ["wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["Window", "Performance", "PerformanceTiming", "console"]

[dev-dependencies]
approx = "0.5"
tempfile = "3"
mlua = { version = "0.10", features = ["luau", "vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
spin_sleep = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
