[package]
name = "psychlib"
version = "0.1.1"
edition = "2024"
description = "A psychology experiment runtime for native and WASM"
license = "MIT"
repository = "https://github.com/PsychLabIO/psychlib"

[lib]
name = "psychlib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "psychlib"
path = "src/main.rs"

[features]
default = ["native"]

native = ["spin_sleep", "tokio/full"]

wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
spin_sleep = { version = "1.3.3", optional = true }

mlua = { version = "0.11.6", features = [
    "luau",
    "vendored",
    "async",
    "serialize",
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1.49", features = [], optional = true }

clap = { version = "4.5.60", features = ["derive", "env"] }

thiserror = "2.0.18"
anyhow = "1.0.102"

winit = { version = "0.30.12", features = ["rwh_06"] }
wgpu = { version = "28", features = ["wgsl"] }
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

wasm-bindgen = { version = "0.2.114", optional = true }
js-sys = { version = "0.3.91", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
glyphon = "0.10.0"
image = "0.25.9"

[dependencies.web-sys]
version = "0.3.91"
optional = true
features = ["Window", "Performance", "PerformanceTiming", "console"]

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.26.0"
mlua = { version = "0.11.6", features = ["luau", "vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
spin_sleep = "1.3.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
